k8s/04-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tanzu-app
  namespace: tanzu-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tanzu-app
  template:
    metadata:
      labels:
        app: tanzu-app
    spec:
      containers:
        - image: harbor.withtanzu.com/fmartin/tanzu-app:latest
          name: app
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: "0.25"
              memory: 512Mi
              ephemeral-storage: "128Mi"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 60
            periodSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            initialDelaySeconds: 10
          # https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.external-config.typesafe-configuration-properties.relaxed-binding.environment-variables
